# GoIt_Web_HW10_1

./: README.md  pyproject.toml
hw_project/hw_project/: settings.py  urls.py
hw_project/quotes/: forms.py  models.py  urls.py  views.py
hw_project/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html
hw_project/users/: forms.py  models.py  urls.py  views.py
hw_project/users/migrations/: 0001_initial.py
hw_project/users/static/users/: style.css
hw_project/users/templates/users/: base.html  login.html  password_reset_done.html  register.html  signup.html
